--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/ysdk": "^1.2.0",
     "i18next": "^25.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
